# Vendor-Contract-Compliance-Analyzer

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: ingestion.py  reports.py
backend/app/core/: database.py  settings.py
backend/app/models/: entities.py
backend/app/schemas/: common.py  ingestion.py  reporting.py
backend/app/services/: chunking.py  compliance_engine.py  export_service.py  gemini_embeddings.py  gemini_service.py  hash_embeddings.py  job_service.py  package_service.py  playbook_service.py  repository.py  requirement_utils.py  storage.py  text_extraction.py  vector_store.py
backend/tests/: test_chunking.py  test_compliance_engine.py  test_health.py  test_requirement_utils.py
docs/: architecture.md  evaluation-plan.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/reports/[reportId]/: page.tsx
frontend/src/app/reports/[reportId]/conflicts/: page.tsx
frontend/src/app/reports/[reportId]/findings/[findingId]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/report/: finding-card.tsx  summary-metric.tsx
frontend/src/components/upload/: package-upload-form.tsx  playbook-upload-form.tsx  upload-queue.tsx
frontend/src/lib/: api.ts
samples/: dpa-demo.txt  dpa-enterprise.txt  insurance-demo.txt  insurance-enterprise.txt  msa-demo.txt  msa-enterprise.txt  playbook-demo.txt  playbook-enterprise.txt  profile-demo.txt  profile-enterprise.txt  security-demo.txt  security-enterprise.txt
